docs: add docummentation for showOpening
