# handler/showOpening.go
@@ -8,6 +8,19 @@ import (
 	"github.com/hlgboot/gopportunities/schemas"
 )
 
+// @BasePath /api/v1
+
+// Show Opening godoc
+// @Summary Show opening
+// @Description Show a job opening
+// @Tags Openings
+// @Accept json
+// @Produce json
+// @Param id query string true "Opening identification"
+// @Success 200 {object} ShowOpeningResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 404 {object} ErrorResponse
+// @Router /opening [get]
 func ShowOpeningHandler(ctx *gin.Context) {
 	id := ctx.Query("id")
 	if id == "" {
